# tree-sitter-vixen

./: Cargo.toml  README.md  grammar.js  package.json  tree-sitter-vixen.wasm  tree-sitter.json  vixen.dylib
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: blocks.txt  calls.txt  calls_and_closures_more.txt  closures.txt  comments.txt  control_and_patterns.txt  control_flow.txt  declarations.txt  declarations_more.txt  edge_cases_more.txt  expressions.txt  expressions_more.txt  gaps.txt  literals.txt  literals_more.txt  more_declarations.txt  more_expressions.txt  more_patterns.txt  new_features.txt  operators.txt  operators_more.txt  patterns.txt  patterns_more.txt  statements_more.txt  top_level.txt  types.txt  types_and_inline.txt  types_more.txt
